test/analyze/match/exhaustive_variants.exp
Error: Inexhaustive pattern matching. For example the pattern `Enum1` is not matched.
test/analyze/match/exhaustive_variants.myte:23:2-27:3
 23 | /   match (x) {
    | |   ^^^^^^^^^^^
 24 | |     | Tuple1 _ -> ()
    | | ^^^^^^^^^^^^^^^^^^^^
 25 | |     | Record1 _ -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^
 26 | |     // Missing enum case
    | | ^^^^^^^^^^^^^^^^^^^^^^^^
 27 | |   }
    | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `Tuple1 _` is not matched.
test/analyze/match/exhaustive_variants.myte:29:2-33:3
 29 | /   match (x) {
    | |   ^^^^^^^^^^^
 30 | |     | Enum1 -> ()
    | | ^^^^^^^^^^^^^^^^^
 31 | |     | Record1 _ -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^
 32 | |     // Missing tuple case
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^
 33 | |   }
    | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `Record1 _` is not matched.
test/analyze/match/exhaustive_variants.myte:35:2-39:3
 35 | /   match (x) {
    | |   ^^^^^^^^^^^
 36 | |     | Enum1 -> ()
    | | ^^^^^^^^^^^^^^^^^
 37 | |     | Tuple1 _ -> ()
    | | ^^^^^^^^^^^^^^^^^^^^
 38 | |     // Missing record case
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^
 39 | |   }
    | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `Record1 _ | Tuple1 _` is not matched.
test/analyze/match/exhaustive_variants.myte:41:2-44:3
 41 | /   match (x) {
    | |   ^^^^^^^^^^^
 42 | |     | Enum1 -> ()
    | | ^^^^^^^^^^^^^^^^^
 43 | |     // Missing multiple cases
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 44 | |   }
    | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `Tuple1 (false, _)` is not matched.
test/analyze/match/exhaustive_variants.myte:64:2-68:3
 64 | /   match (x) {
    | |   ^^^^^^^^^^^
 65 | |     | Tuple1 (true, _) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 66 | |     | Enum1 -> ()
    | | ^^^^^^^^^^^^^^^^^
 67 | |     | Record1 _ -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^
 68 | |   }
    | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `Record1 { foo: false, ... }` is not matched.
test/analyze/match/exhaustive_variants.myte:70:2-74:3
 70 | /   match (x) {
    | |   ^^^^^^^^^^^
 71 | |     | Record1 { foo: true, ... } -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 72 | |     | Enum1 -> ()
    | | ^^^^^^^^^^^^^^^^^
 73 | |     | Tuple1 _ -> ()
    | | ^^^^^^^^^^^^^^^^^^^^
 74 | |   }
    | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `Record1 { bar: "*", foo: false }` is not matched.
test/analyze/match/exhaustive_variants.myte:79:2-84:3
 79 | /   match (x) {
    | |   ^^^^^^^^^^^
 80 | |     | Record1 { foo: true, ... } -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 81 | |     | Record1 { foo: false, bar: "" } -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ...  |
 83 | |     | Enum1 -> ()
    | | ^^^^^^^^^^^^^^^^^
 84 | |   }
    | \ ^^^